--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.13.4",
     "firebase": "^4.2.0",
+    "nodemailer": "^4.0.1",
     "osmosis": "^1.1.4"
   }
 }
