--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.13.4",
     "firebase": "^4.2.0",
     "nodemailer": "^4.0.1",
-    "osmosis": "^1.1.4"
+    "osmosis": "^1.1.4",
+    "twitter": "^1.7.1"
   }
 }
