--- a/package.json
+++ b/package.json
@@ -10,13 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.18.2",
-    "ejs": "^2.5.7",
     "express": "^4.13.4",
     "firebase": "^4.2.0",
-    "jsonfile": "^4.0.0",
     "nodemailer": "^4.0.1",
-    "osmosis": "^1.1.4",
-    "twitter": "^1.7.1"
+    "osmosis": "^1.1.4"
   }
 }
