--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "wrdsmth",
   "version": "1.0.0",
-  "description": "",
+  "description": "Scrapper of data",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Jake Herman",
   "license": "ISC",
   "dependencies": {
     "express": "^4.13.4",
     "firebase": "^4.2.0",
-    "nodemailer": "^4.0.1",
-    "osmosis": "^1.1.4"
+    "osmosis": "^1.1.4",
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2",
+    "twilio": "^3.11.3"
   }
 }
